--- a/tutorium/aufgabe3/zweiteStunde/start.html
+++ b/tutorium/aufgabe3/zweiteStunde/start.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Table</title>
+    <title>Canvas</title>
     <script src="scripts.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
